<resources>
    <string name="app_name">OurMedium</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_feed">Feed</string>
    <string name="sign_up">Sign Up</string>
    <string name="have_an_account">Have an account?</string>
    <string name="username_mr_robo24">Username: mr_robo24</string>
    <string name="email_mr_robo24_mail_com">Email: mr_robo24@mail.com</string>
    <string name="password">Password: *******</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="need_an_account">Need an account?</string>
</resources>