<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="12dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_sign_in_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="36sp"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txt_goto_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:gravity="center"
            android:text="@string/need_an_account"
            android:textColor="@color/conduit_green"
            android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@id/txt_sign_in_header" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@id/btn_sign_in"
            app:layout_constraintTop_toBottomOf="@id/txt_sign_in_header"
            app:layout_constraintVertical_bias="0.40">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_mr_robo24_mail_com" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:padding="8dp"
            app:layout_constraintTop_toBottomOf="@id/email_sign_in">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_password_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>